--- a/notebook_05.ipynb
+++ b/notebook_05.ipynb
@@ -2569,6 +2569,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# TODO: esto es copiado de arriba, hay que hacerlo todavía\n",
     "# --- Visualizar activaciones de diferentes capas ---\n",
     "fig, axes = plt.subplots(2, 3, figsize=(15, 10))\n",
     "fig.suptitle('Activaciones en Diferentes Capas de VGG16', fontsize=16)\n",
