--- a/notebook_04.ipynb
+++ b/notebook_04.ipynb
@@ -700,9 +700,9 @@
    "source": [
     "Ambas regiones tienen una gran desviación, ya que hay múltiples tejidos de tipos distintos.\n",
     "\n",
-    "La primera región parece estar compuesta principalmente de grasa y con algo de aire, lo que desplaza nuestra media a la izquierda. También contiene otros tejidos suaves, como por ejemplo músculos. No parece haber gran presencia de hueso aunque el valor máximo sea muy elevado.\n",
+    "La primera región es el corazón y sus alrededores, por lo que parece estar compuesta principalmente de grasa y con algo de aire, lo que desplaza nuestra media a la izquierda. También contiene otros tejidos suaves, como por ejemplo músculos. No parece haber gran presencia de hueso aunque el valor máximo sea muy elevado.\n",
     "\n",
-    "En la segunda región podemos apreciar algo similar: principalmente está compuesta de grasa con algo de aire y tejidos blandos. Sin embargo, sí se puede apreciar que el valor medio es más alto, lo que parece indicar que contiene más estructuras óseas que la región de interés anterior, probablemente incluyendo la columna."
+    "La segunda región es el entorno de la columna con lo que podemos apreciar que está principalmente está compuesta de grasa con algo de aire y tejidos blandos. Sin embargo, sí se puede apreciar que el valor medio es más alto, lo que indica que contiene más estructuras óseas que la región de interés anterior."
    ]
   },
   {
@@ -813,6 +813,12 @@
     }
    ],
    "execution_count": 29
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Hemos escogido el corazón como región de interés, siguiendo con la primera ROI del ejercicio 2, que podemos ver claramente en la visualización.",
+   "id": "35183f94b620fb90"
   }
  ],
  "metadata": {
