Checked to run in collab, uncommneted installs, rewrote notebook 2

--- a/notebook_04.ipynb
+++ b/notebook_04.ipynb
@@ -36,7 +36,7 @@
    },
    "source": [
     "# --- Instalación de la librería DICOM ---\n",
-    "#!pip install pydicom\n",
+    "!pip install pydicom\n",
     "\n",
     "# --- Importación de librerías necesarias ---\n",
     "import numpy as np\n",
