--- a/notebook_05.ipynb
+++ b/notebook_05.ipynb
@@ -48,7 +48,7 @@
    },
    "source": [
     "# --- Instalación de librerías necesarias ---\n",
-    "#!pip install pydicom torch torchvision torchinfo\n",
+    "!pip install pydicom torch torchvision torchinfo\n",
     "\n",
     "# --- Importaciones ---\n",
     "import numpy as np\n",
@@ -95,8 +95,8 @@
    "source": [
     "# Download data\n",
     "\n",
-    "#!pip install gdown\n",
-    "#!gdown --id 1whdnMdI6qkW-0kypplMFnWB2VWxyHUFF -O dsp.zip"
+    "!pip install gdown\n",
+    "!gdown --id 1whdnMdI6qkW-0kypplMFnWB2VWxyHUFF -O dsp.zip"
    ],
    "outputs": [],
    "execution_count": 42
@@ -115,9 +115,7 @@
      "start_time": "2025-12-02T22:41:11.373896Z"
     }
    },
-   "source": [
-    "#!unzip dsp.zip"
-   ],
+   "source": "!unzip dsp.zip",
    "outputs": [],
    "execution_count": 43
   },
